--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.grid-container {
+    display: grid;
+    grid-template-columns: 250px auto;
+    grid-template-rows: auto 1fr;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .header {
+    grid-column: 1 / -1;
+    background-color: #333;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .icon {
+    margin-right: 20px;
+    cursor: pointer;
   }
-}
+  
+  .main-container {
+    padding: 20px;
+  }
+  
+  .sidebar {
+    background-color: #444;
+    color: white;
+  }
+  
+  .sidebar-list {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .sidebar-list-item {
+    padding: 10px;
+  }
+  
+  .main-cards {
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
+  }
+  
+  .card {
+    background-color: #f1f1f1;
+    padding: 20px;
+    border-radius: 8px;
+    width: 20%;
+    text-align: center;
+  }
+  
+  .charts {
+    display: flex;
+    justify-content: space-between;
+  }
+  
